apps/monitoring/prometheus/overlays/monitoring/resources/external-dns.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: prometheus-extname
    annotations:
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:bVcibjtcfs9GUe4Ym0O9raM1ZwGh2I544HA3/ovB9gPl3l3LjJfj6A==,iv:9wZqAFOX7yuZ11y0E8HC6CgISEWaKPbNLVcm/dFlowU=,tag:f2Uu+hGSlA65ucuBWhmRlg==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
spec:
    type: ExternalName
    externalName: ENC[AES256_GCM,data:/kKRy/c/GCLgxpe9X6L/YZ7MB92rMv/bfX6J/vUuWHd6AaANG4bIWw==,iv:Q050Xa0S9yMLlALupG1C1NGcDOSSEpxk/AzAsVkUbRQ=,tag:+UwVWGLUx1Uya9uaBQoGZA==,type:str]
    sessionAffinity: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvSTQvWjBscDlRT3h2M2lI
[...]
            ezGuaiY71dlw42VelU9dHKL3rSbBqKB385h0+IVg+KvhHZU18qFp0w==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-07-24T11:52:12Z"
    mac: ENC[AES256_GCM,data:CEjouv/3gQnAIP8W2yLbryIYIlvUJu8Io1NikSDlNMNrMLT4NRHYNJz33UjDj++VQBP8m3KiL2M7ryjANL+MWBZhfeZSgq+GYMil5HNANsUCfrHNnxdkJfRKwPMGSLBLAwbI086CfnLhlZXexPjYu4EmaGB0ZZlTwX9QojM5Ms8=,iv:FJm2Od4TicCcb49vFk+vcdSiUb6Vv1IJR4hYv9BC6c8=,tag:a2oa+6Wdx5diHILqZmpMwg==,type:str]
    pgp:
        - created_at: "2024-06-20T13:15:12Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAh+MWVRxkkt+2fuW/nnJhfvfG6bt+aGqMNOU0FIunCOt4
[...]
            =Hnf9
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
