apps/monitoring/prometheus/overlays/monitoring/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        external-dns.alpha.kubernetes.io/target: monitoring.anotherlife.org.pl
        kubernetes.io/ingress.class: traefik-external
    labels:
        app.kubernetes.io/name: prometheus
    name: prometheus
    namespace: monitoring
spec:
    entryPoints:
        - ENC[AES256_GCM,data:qXjV/mWrKAqE,iv:TJInrhp36qIm/7WtSXHnVtvF9g1ZCo/U5ib49kS25Vg=,tag:CGPbQaNGI8vaSX7nMCxNPQ==,type:str]
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:eB1q7wnvdFGsnNEcOZjZOJiOnq1CHwcyXq80FpXSV8f6c3GsdNJ67XsNnFixYwuR,iv:N9PcRPVavLqRVXSpsERBmvLd36EJLqJhhoHdkt1ejmo=,tag:Lxfeq8jIiVddiYYCOLIQlg==,type:str]
          middlewares:
            - name: ENC[AES256_GCM,data:Z7ckFL6GfsR8Mx6kyRb0pKQX/U6Kzyw=,iv:zi72HhoMm5Fd+X9hEY+n2gWwktQEoDY31WprUgXF1j4=,tag:MinBk9rnBCG7iptTQhssng==,type:str]
              namespace: ENC[AES256_GCM,data:5Ly3npXBLQ==,iv:gSqlw6lVa13krMK4tZuCg5JKaKg7CDC8xO4zmXvDiIQ=,tag:eDoyuiZRIrJUINLvy/YQlQ==,type:str]
          services:
            - kind: TraefikService
              name: ENC[AES256_GCM,data:AqqaY8OwlAx/Gw==,iv:Acp9BEShLqQjqSQbedN3hj4MkFZH1q3o7rybZLKxAAA=,tag:vmEa8myTQZccauvnxfTtLg==,type:str]
              #ENC[AES256_GCM,data:0N4ZIg==,iv:19hTuQFQ/d9G+umwqYBoGfcJTP5eI+wnq0EKdNH6jus=,tag:irOGgWgUXLvWPatNjUL2mw==,type:comment]
              port: ENC[AES256_GCM,data:SYo=,iv:dZNdwNl/KptM0NmJ3x6HQN5PUxPtK8nhgjHfC86t5TY=,tag:MijBD57Mgy8CUoQccTMEXg==,type:int]
    tls:
        domains:
            - main: ENC[AES256_GCM,data:trfExDK7ylo00jdYz6i7iXlB2Fc/4LPYfqFO/cw=,iv:C87p9zdpl3LtBa5XxNV2O332O6Z0U1HJbuNQH10pZCE=,tag:rBIPBVavRwjbRGNIWdHhNA==,type:str]
              sans:
                - ENC[AES256_GCM,data:yfz8Tz6uN2nL4GcTXB60VFqhDsCyJTwpDuWhB4ON,iv:FwjxFFKNOGsn5cjh0/nCdcUVu6ZVAO8zHGJrmrOQlKI=,tag:9HHIJzeBpYH1bdo0fPDG2A==,type:str]
        options:
            name: ENC[AES256_GCM,data:280BJfIbO1H3,iv:7Ka0//ykMH2zybUng0JQ8Bt7+EKmI7r36PsHo7Q6HUA=,tag:R2hY4Ah9noFHirvOaeEslQ==,type:str]
            namespace: ENC[AES256_GCM,data:XbCJWun+Ew==,iv:vbhCuCATmfVTjk1C9hMX7W8Xmt8jxslixGU+iRgzWB4=,tag:GW9NURjR+zKZEU6BYSx2cw==,type:str]
        secretName: ENC[AES256_GCM,data:gRM6p5HcilwmypxAMVhA1t51F14j,iv:exQZAIEAQU6VeAYFBCv8OnyLgDUQmmdqRVRFERBJwvw=,tag:ifDYXN88CDLSfMAzeFcbOQ==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsS0dmU3llUTF6aTBDNDhk
[...]
            xjokoNZFtEdoeyH2svEUV7qPeMOSfjrfMQgraDYCKZKktYpTcSA8lw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-07-24T12:32:27Z"
    mac: ENC[AES256_GCM,data:m1YyJkfm0EmObHepinzuDflNRjQ1Ov6rWG2344exvLu6f839GO3qiADgTBpbPmXIbhmvlFcjDg32yrQubiKn+u74Xk9gOCc40qEUkmL56YtzFiexJx6xuvSsie70EXm3+6voK82qB7wJf40gA8aqDXNDIcHvFLelMmTjd4iJCuU=,iv:5R6l0DevBmcY9aUdcMrfhFgehaovGLNIGtHGqio+QAA=,tag:5cnySy+KLZ5YOFK9pszVYA==,type:str]
    pgp:
        - created_at: "2024-07-24T12:32:27Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/9HYwerpSdmTcD1h8kJ2m/xYPmU7vhljwWTeqpAsbFyvFN
[...]
            =u2Y/
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    unencrypted_regex: ^(apiVersion|metadata|kind|type)$
    version: 3.8.1
